# Monkey-Typer

./: CMakeLists.txt  README.md  english.txt  germany.txt  main.cpp  polish.txt
